Made it so it works with the web

--- a/CSharpCapstone/appsettings.json
+++ b/CSharpCapstone/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DevDb": "server=localhost\\sqlexpress;database=CSharpCapstoneApiDb;trusted_connection=true;trustServerCertificate=true;"
-  }
+    "ConnectionStrings": {
+        "DevDb": "server=localhost\\sqlexpress;database=CSharpCapstoneApiDb;trusted_connection=true;trustServerCertificate=true;",
+        "ProdDb": "Data Source=tcp:s30.winhost.com;Initial Catalog=DB_161332_prsdb;User ID=DB_161332_prsdb_user;Password=Boschert01!;Integrated Security=False;trustServerCertificate=true;"
+    }
 }
+
